--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,3 +5,6 @@ spring:
     url: jdbc:mysql://localhost:3306/habits
     username: root
     password: admin
+  jpa:
+    hibernate:
+      ddl-auto: validate
