--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,10 +1,6 @@
 spring:
-  liquibase:
-    change-log: classpath:db/changelog/master.xml
-  datasource:
-    url: jdbc:mysql://localhost:3306/habits
-    username: root
-    password: admin
+  profiles:
+    active: dev
   jpa:
     hibernate:
       ddl-auto: validate
